--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">JD</div>
+            <div class="logo">CK</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -21,8 +21,8 @@
     <main>
         <section id="hero">
             <div class="hero-content">
-                <h1>John Doe</h1>
-                <p> Manager - CSR, CCL |Karmayogi Awardee by Coal Minister |ESG Innovation & Systems Leader </p>
+                <h1>Chandan Kumar</h1>
+                <p>CSR Strategist | Systems Innovator | Digital Storytelling Pioneer</p>
                 <button class="cta-button">View My Work</button>
             </div>
         </section>
@@ -30,63 +30,51 @@
         <section id="about">
             <div class="container">
                 <h2>About Me</h2>
-                <p>I work at the intersection of community development, coal sector transformation, and systems thinking—where traditional CSR meets next-generation sustainability impact through innovative digital platforms.
-
-🏆 National Recognition (2024-25)
-✅ Karmayogi Award by Hon'ble Union Coal Minister - Top 20 performer on iGOT portal
-✅ "Best Nodal Officer" Award for Vigilance Awareness Campaign across CIL subsidiaries
-✅ SKOCH ESG GOLD Award 2024 - Outstanding CSR initiatives in Jharkhand's Aspirational Districts
-✅ Vigilance Excellence Recognition for transparency and ethical governance
-
-🌱 Ground-to-Governance Impact
-With over a decade in coal industry CSR, I've executed large-scale initiatives: Van Mahotsav (3000 saplings), International Yoga Day (270+ participants), Swachhta campaigns, and strategic blood donation drives.
-
-🎬 Digital Innovation: CSRflix & InsightFlix
-CSRflix - Multimedia platform showcasing CSR interventions through digital storytelling, documentaries, and grassroots narratives. Gives voice to beneficiaries while promoting transparency across health, education, environment sectors.
-InsightFlix - Dynamic book summary platform fostering continuous learning within CSR ecosystem. Curated content spanning leadership, psychology, policy analysis empowers professionals with actionable insights for social interventions.
-Both platforms integrate multilingual content and community engagement to democratize CSR knowledge.
-
-🎯 Strategic Approach: Systems + Stories + Scale
-My methodology integrates human-centered design with impact tracking, developing digital-first ecosystems aligned with UN SDGs, ESG frameworks, and Just Transition imperatives. 100+ iGOT Karmayogi Certifications drive continuous learning.
-
-🚀 Building What's Next
-Currently architecting:
-🔹 Hyperlocal Innovation Labs in mining regions
-🔹 Gamified Learning Ecosystems for youth
-🔹 Just Transition Pathways through evidence-based models
-🔹 Digital storytelling platforms for CSR transparency
-🔹 ESG Integration Frameworks combining ethics, governance, and climate resilience
-
-🤝 Let's Co-Create Transformational Impact
-I welcome strategic partnerships across CSR strategy, ESG implementation, energy transition, systems innovation, and policy advocacy. If you're reimagining development from grassroots to governance—building equitable, ethical, and regenerative solutions—let's connect.</p>
+                <p>I work at the intersection of community development, coal sector transformation, and systems thinking—where traditional CSR meets next-generation sustainability impact through innovative digital platforms. With over a decade in coal industry CSR, I've been recognized nationally for my innovative approach to social impact and digital storytelling.</p>
                 <div class="skills">
-                    <span class="skill">JavaScript</span>
-                    <span class="skill">React</span>
-                    <span class="skill">Node.js</span>
-                    <span class="skill">Python</span>
-                    <span class="skill">SQL</span>
+                    <span class="skill">CSR Strategy</span>
+                    <span class="skill">ESG Framework</span>
+                    <span class="skill">Digital Storytelling</span>
+                    <span class="skill">Systems Thinking</span>
+                    <span class="skill">Community Development</span>
+                    <span class="skill">Innovation</span>
                 </div>
             </div>
         </section>
 
         <section id="projects">
             <div class="container">
-                <h2>Projects</h2>
+                <h2>Key Projects & Achievements</h2>
                 <div class="projects-grid">
                     <div class="project-card">
-                        <h3>E-commerce Platform</h3>
-                        <p>A full-stack e-commerce solution built with React and Node.js</p>
+                        <h3>CSRflix Platform</h3>
+                        <p>Multimedia platform showcasing CSR interventions through digital storytelling, documentaries, and grassroots narratives. Democratizes CSR knowledge through multilingual content.</p>
                         <a href="#" class="project-link">View Project</a>
                     </div>
                     <div class="project-card">
-                        <h3>Task Management App</h3>
-                        <p>A collaborative task management tool with real-time updates</p>
+                        <h3>InsightFlix</h3>
+                        <p>Dynamic book summary platform fostering continuous learning within CSR ecosystem. Curated content spanning leadership, psychology, and policy analysis.</p>
                         <a href="#" class="project-link">View Project</a>
                     </div>
                     <div class="project-card">
-                        <h3>Weather Dashboard</h3>
-                        <p>A responsive weather app with location-based forecasts</p>
-                        <a href="#" class="project-link">View Project</a>
+                        <h3>National Recognition 2024-25</h3>
+                        <p>Karmayogi Award by Hon'ble Union Coal Minister, Best Nodal Officer Award, and SKOCH ESG GOLD Award for outstanding CSR initiatives in Jharkhand.</p>
+                        <a href="#" class="project-link">View Details</a>
+                    </div>
+                    <div class="project-card">
+                        <h3>Van Mahotsav 2024</h3>
+                        <p>Led comprehensive tree plantation drive including "Ek Ped Maa Ke Naam" initiative. Successfully planted 3000+ saplings across coal mining regions.</p>
+                        <a href="#" class="project-link">View Impact</a>
+                    </div>
+                    <div class="project-card">
+                        <h3>Digital Innovation Labs</h3>
+                        <p>Architecting hyperlocal innovation labs in mining regions, gamified learning ecosystems for youth, and Just Transition pathways through evidence-based models.</p>
+                        <a href="#" class="project-link">Learn More</a>
+                    </div>
+                    <div class="project-card">
+                        <h3>Community Impact Programs</h3>
+                        <p>Executed large-scale initiatives including International Yoga Day (270+ participants), Swachhta campaigns, blood donation drives, and medical camps.</p>
+                        <a href="#" class="project-link">View Programs</a>
                     </div>
                 </div>
             </div>
@@ -94,19 +82,19 @@ I welcome strategic partnerships across CSR strategy, ESG implementation, energy
 
         <section id="contact">
             <div class="container">
-                <h2>Get In Touch</h2>
-                <p>I'm always open to discussing new opportunities and interesting projects.</p>
+                <h2>Let's Co-Create Transformational Impact</h2>
+                <p>I welcome strategic partnerships across CSR strategy, ESG implementation, energy transition, systems innovation, and policy advocacy. If you're reimagining development from grassroots to governance—let's connect.</p>
                 <div class="contact-info">
-                    <p>📧 chandan.kumar5373@coalindia.in </p>
+                    <p>📧 chandan.kumar5373@coalindia.in</p>
                     <p>📱 +91-7004268783</p>
-                    <p>🌐 www.linkedin.com/in/chandaniifm </p>
+                    <p>🌐 www.linkedin.com/in/chandaniifm</p>
                 </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Chandan Kumar. All rights reserved.</p>
+        <p>&copy; 2024 Chandan Kumar. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
